<resources>
    <string name="app_name"> E-santé DZ</string>
    <string name="action_settings">Settings</string>
    <string name="Email">E_Mail</string>
    <string name="MDP">Mot De Passe</string>
    <string name="Authentification">Se Connecter</string>
    <string name="Nom">Nom : </string>
    <string name="Prenom">Prenom : </string>
    <string name="E_mail">.......</string>
    <string name="Addresse">add : </string>
    <string name="Age">Age </string>
    <string name="Info_medicale">Information Medicale</string>
    <string name="Info_contact">Contact</string>
    <string name="Deconnexion">Se Déconnecté</string>
    <string name="ble_not_supported">ble_not_supported</string>
    <string name="ACTION_STATE_CHANGED">ACTION_STATE_CHANGED</string>

    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="item_1">Association</string>
    <string name="item_2">Suivit</string>
    <string name="item_3">Statistique</string>

    <!-- Login -->
    <string name="booki">E-Santé DZ</string>
    <string name="welcome_back">E-Santé DZ</string>
    <string name="read_it_together">A Votre Service</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailValidation">Entre Un Email Valide</string>
    <string name="emailValidationVide">Champs Obligatoire</string>
    <string name="NinCorect">Merci de saisir un NIN Valide</string>
    <string name="passwordValidation">Entre Un password</string>
    <string name="passwordCorrect">Entre Un password</string>
    <string name="passwordConfirmation">Mot De Passe ne corespend pas</string>


    <string name="InfoPerso">Information Personel</string>
    <string name="DatNaiss">Date De Naissance (jj-mm-aaaa)</string>
    <string name="numTel">Numero du telephone +213</string>


    <!-- homePageMedecin -->
    <string name="Associer">Association</string>
    <string name="AssocierCapteur">Patient_Capteur</string>
    <string name="suivit">Suivi</string>
    <string name="suivitPatient">Suivi Des Patients</string>
    <string name="Statistique">Statistique</string>
    <string name="StatistiqueNat">Statistiques Des Patients</string>
    <string name="Profile">Profil</string>
    <string name="gestionDuProfile">Gestion Du Profil</string>
    <string name="notification">Notification</string>

    <!-- Association -->
    <string name="NiNPatient">NIN du Patient</string>
    <string name="MotDePasse">Mot De Passe</string>
    <string name="ConfirmeMotDePasse">Confirmer Le Mot De Passe</string>
    <string name="valider">Valider</string>


    <!-- PAtientSuivit -->
    <string name="InfoPat">Informations</string>
    <string name="InfoPatPerso">personnelles Du patient</string>
    <string name="InfoPatMedc">Medicales Du patient</string>
    <string name="InfoDoc">Documents</string>
    <string name="ListDocs">Liste Des Documents</string>
    <string name="InfoCapt">Capteurs</string>
    <string name="ListCapt">Liste Des Capteurs</string>

    <!-- TitreSheet -->
    <string name="TiteCapteur">Liste Des Capteurs : </string>
    <string name="TiteDocs">Liste Des Documents : </string>
    <string name="TiteInfoPers">information personnelle : </string>
    <string name="TiteInfoAlert">information Alert : </string>
    <string name="TittreData">Data suivit :</string>
    <string name="TittreNotification">Notifications :</string>
    <string name="TittreGraphe">Graphe Des Données :</string>
    <string name="Docs">Détails Médicaux :</string>
    <string name="padDeCapteurs">Le Patient n\'a pas de capteur!!!</string>

    <!-- bleutooth -->
    <string name="recherche">Rechercher</string>
    <string name="caliderDevice">Valider</string>


    <!-- list des documents-->
    <string-array name="list_type_docs">
        <item>Analyse</item>
        <item>Radio </item>
        <item>Bilan Sanguin</item>
        <item>Rapport</item>
    </string-array>


</resources>
